--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang='en'>
     <head>
         <meta charset='utf-8'>
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="style.css">
         <title>All About Me!</title>
     </head>
     <body>
         <h1>All About Me!</h1>
-        <h2><div id="demoFont1">Hi! My name's Maddy, and I'm a junior!</div></h2>
+        <h2><div id="demoFont1">Hi! My name's Maddy, and I'm a 2nd year at Northeastern!</div></h2>
         <h1></h1>
         <a href="thingsilike.html"><div id="demoFont">click here to see the things i like!</div></a>
         <div>
@@ -16,13 +16,8 @@
             <p> </P>
         </div>
         <p> </P>
-        <a href="projects.html" ><div id="demoFont">click here to see my projects from this year!</div></a>
-        <div>
-            <img src="images/cousinsfirepit.JPG" style="width:350px;height:300px">
-            <img src="images/skifriendsmedal.JPG" style="width:215px;height:300px">
-            <img src="images/airplane.JPG" style="width:225px;height:300px">
-            <img src="images/cousinuo.JPG" style="width:225px;height:300px">
-            <img src="images/familysunset.JPG" style="width:390px;height:300px">
+            <img src="snowboard.JPG">
+            <img src="campfriends.JPG">
         </div>
         <style>
             a:link {
