--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <p> </P>
         </div>
         <p> </P>
-            <img src="snowboard.JPG">
-            <img src="campfriends.JPG">
+            <img src="snowboard.JPG" style="width:316px;height:560px">
         </div>
         <style>
             a:link {
