--- a/thingsilike.html
+++ b/thingsilike.html
@@ -11,8 +11,8 @@
      <div>
          <img src="snowboarding.jpeg" alt="snowboarding" style="width:475px;height:350px">
      </div>
-     <h2>Running!</h2>
-        <img src="images/running.jpg" alt="running" style="width:250px;height:375px">
+     <h2>My friends!</h2>
+        <img src="friends.jpg" alt="running" style="width:250px;height:375px">
      <h2>My Favorite TV Shows!</h2>
      <div id="demoFont">
         <ul>
@@ -20,5 +20,27 @@
             <li>Grey's Anatomy</li>
             <li>Quantico</li>
     </ul>
+    <div>
+        <h4>Joining college was both an exciting and overwhelming experience 
+            for me. As a finance and computer science major, I wanted to immerse 
+            myself in both the academic and social aspects of college life. 
+            Early on, I wanted to find STEM-related clubs to connect with 
+            people of similar interests. I joined various organizations 
+            focused on computer science, finance, and technology, which helped 
+            me build technical skills, collaborate on projects, and attend 
+            networking events. These clubs not only provided valuable learning 
+            experiences but also introduced me to mentors and peers who have 
+            guided me along the way. At the same time, I wanted a well-rounded 
+            college experience, so I decided to join a sorority. Becoming part 
+            of Greek life gave me a sense of community, leadership opportunities,
+             and lifelong friendships. As the secretary of my sorority, I have 
+             taken on the responsibility of organizing executive board meetings, 
+             which has strengthened my communication and organizational skills.
+             Balancing my involvement in STEM clubs and my sorority has allowed 
+             me to grow academically, socially, and professionally. Through 
+             these experiences, I have gained confidence, built lasting 
+             relationships, and developed a strong sense of belonging in my college 
+             journey.</h4>
+    </div>
     </body>
 </html>
