--- a/thingsilike.html
+++ b/thingsilike.html
@@ -42,5 +42,6 @@
              relationships, and developed a strong sense of belonging in my college 
              journey.</h4>
     </div>
+    <a href="index.html"><div id="demoFont">click here to go back to the main page!</div></a>
     </body>
 </html>
