--- a/thingsilike.html
+++ b/thingsilike.html
@@ -21,26 +21,19 @@
             <li>Quantico</li>
     </ul>
     <div>
-        <h4>Joining college was both an exciting and overwhelming experience 
-            for me. As a finance and computer science major, I wanted to immerse 
-            myself in both the academic and social aspects of college life. 
-            Early on, I wanted to find STEM-related clubs to connect with 
-            people of similar interests. I joined various organizations 
-            focused on computer science, finance, and technology, which helped 
-            me build technical skills, collaborate on projects, and attend 
-            networking events. These clubs not only provided valuable learning 
-            experiences but also introduced me to mentors and peers who have 
-            guided me along the way. At the same time, I wanted a well-rounded 
-            college experience, so I decided to join a sorority. Becoming part 
-            of Greek life gave me a sense of community, leadership opportunities,
-             and lifelong friendships. As the secretary of my sorority, I have 
-             taken on the responsibility of organizing executive board meetings, 
-             which has strengthened my communication and organizational skills.
-             Balancing my involvement in STEM clubs and my sorority has allowed 
-             me to grow academically, socially, and professionally. Through 
-             these experiences, I have gained confidence, built lasting 
-             relationships, and developed a strong sense of belonging in my college 
-             journey.</h4>
+        <h4>Snowboarding is one of my favorite pastimes, offering an 
+            exciting mix of aadventure on the mountain. Whether it's carving 
+            down a fresh powder slope or spending the day on the mountain 
+            with friends, there's always an excitement that comes with every day. 
+            I love the camaraderie that comes with snowboarding, where 
+            friends can push each other to improve while having fun at the same time.
+            When we're not on the slopes, we bond over *New Girl*, a show that 
+            always brings us together. The fun dynamics of the group of characters resonate 
+            with us and often become the backdrop for our conversations. Whether it's 
+            quoting funny lines from the show or debating which character we are most like,
+             *New Girl* never fails to provide a good laugh. These interests, snowboarding and *New Girl*, 
+             are just a few of the things that make spending time with my friends so 
+             enjoyable.</h4>
     </div>
     <a href="index.html"><div id="demoFont">click here to go back to the main page!</div></a>
     </body>
